[tool.poetry]
name = "cratd2c-stakingmanager-backend"
version = "0.1.0"
description = ""
authors = ["Aleksei Grigorev <longwinterday@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
